--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "express": "^4.13.4",
     "express-partials": "^0.3.0",
     "lodash": "^4.17.4",
-    "mysql": "^2.12.0",
+    "mysql": "^2.18.1",
     "node-mocks-http": "^1.6.1",
+    "nodemon": "^2.0.6",
     "request": "^2.34.0"
   },
   "devDependencies": {
